--- a/.config/lazygit/state.yml
+++ b/.config/lazygit/state.yml
@@ -1,6 +1,6 @@
 lastupdatecheck: 0
 recentrepos:
-- /home/vallen/Workspace/dotfiles
+- /home/flynn/repos/.dotfiles
 startuppopupversion: 5
 customcommandshistory: []
 hidecommandlog: false
