--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -g default-terminal "screen-256color"
 set -g mouse on
 
 unbind C-b
@@ -25,12 +26,7 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-set-option -g default-terminal "screen-256color"
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -39,6 +35,7 @@ set -g @plugin 'christoomey/nvim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_l_left_separator ""
 set -g @catppuccin_l_right_separator ""
@@ -53,8 +50,10 @@ set-window-option -g mode-keys vi
 bind '|' split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
 bind -n C-Left resize-pane -L 2
 bind -n C-Down resize-pane -D 2
 bind -n C-Up resize-pane -U 2
 bind -n C-Right resize-pane -R 2
-
