--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -26,7 +26,7 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# set -g @catppuccin_flavour 'mocha'
+set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
@@ -46,6 +46,7 @@ run '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
+set -g cursor-style "underline"
 
 bind '|' split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
