--- a/.ideavimrc
+++ b/.ideavimrc
@@ -55,6 +55,7 @@ map <C-n> <Action>(NextTab)
 map <C-p> <Action>(PreviousTab)
 
 map gh <Action>(ShowErrorDescription)
+map <leader>h <Action>(QuickJavaDoc)
 
 map <leader>p ["_dP]
 map <leader>y ["+y]
@@ -69,13 +70,27 @@ noremap <C-H> <C-W><C-H>
 map <leader>| :vsplit<CR>
 map <leader>_ :split<CR>
 
+" github functionality"
+map <leader>gc <Action>(Commit)
+map <leader>gp <Action>(Push)
+map <leader>gl <Action>(Pull)
+map <leader>gb <Action>(Branches)
+map <leader>gd <Action>(Diff)
+map <leader>gs <Action>(Status)
+
 " Original mappings from provided example
-map ,d :action Debug<CR>
+map ,d <Action>(Debug)<CR>
 map ,r <Action>(RenameElement)
 map ,c <Action>(Stop)
+map ,b <Action>(ToggleLineBreakpoint)
+map ,B <Action>(ToggleMethodBreakpoint)
+map ,m <Action>(ToggleFieldBreakpoint)
+map ,n <Action>(MuteBreakpoints)
+map ,s <Action>(StepOver)
+map ,i <Action>(StepInto)
+map ,o <Action>(StepOut)
+map ,u <Action>(RunToCursor)
+map ,p <Action>(Resume)
 
-map <leader>h <Action>(Vcs.ShowTabbedFileHistory)
 map <S-Space> <Action>(GotoNextError)
-
-map <leader>b <Action>(ToggleLineBreakpoint)
 map <leader>o <Action>(FileStructurePopup)
