--- a/.config/lazygit/state.yml
+++ b/.config/lazygit/state.yml
@@ -1,5 +1,6 @@
 lastupdatecheck: 0
 recentrepos:
+- /home/flynn/repos/neuroexplore
 - /home/flynn/repos/.dotfiles
 startuppopupversion: 5
 customcommandshistory: []
