--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -16,14 +16,13 @@ print_info() {
     info "$(color 10)󰛖 Font" term_font
 	info "$(color 5) Disk" disk
     info "$(color 14) CPU" cpu
-	# info "$(color 12) GPU" gpu
+	info "$(color 12) GPU" gpu
     info "$(color 9) MEM" memory
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
     # info "Font" font
-    # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "Local IP" local_ip
     # info "Public IP" public_ip
