--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -129,7 +129,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = ["100:class_g = 'firefox'"]
+opacity-rule = ["100:class_g = 'firefox'",
+    "95:class_g = 'jetbrains-pycharm'"]
+# opacity-rule = ["90:class_g = 'jetbrains-pycharm'"]
 
 
 #################################
