--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,32 +12,28 @@ include-file = $HOME/.config/polybar/modules/misc.ini
 [bar/primary-top]
 monitor = DP-2
 monitor-exact = true
-overide-redirect = false
+overide-redirect = true
 
 enable-ipc = true
-
 bottom = false
-
 fixed-center = true
 
 width = 100%
-height = 23pt
-offset-x = 98%
-offset-y = 8pt
-
-border-size = 5pt
-border-color = ${colors.bg-3}
+height = 25pt
+margin-top = 5
+offset-y = 5
+border-color = #00000000
 
 line-size = 1pt
 
-padding-left = 0pt
-padding-right = 0pt
+padding-left = 2pt
+padding-right = 2pt
 
 module-margin-left = 0pt
 module-margin-right = 0pt
 
-background = ${colors.bg-3}
-foreground = ${colors.fg-3}
+background = #00000000
+foreground = #2E2E2E
 
 font-0 = ShureTechMono Nerd Font:size=13;4
 font-1 = ShureTechMono Nerd Font:size=22;5
@@ -48,52 +44,8 @@ scroll-up = i3.next
 scroll-down = i3.prev
 
 modules-left = left filesystem slash space slash cpu slash space slash memory slash space slash temperature slash space slash xworkspaces-0  right
-modules-center = left xwindows right
+modules-center = xwindows
 modules-right = left pulseaudio slash space slash time slash space slash date right
-
-wm-restock = i3
-
-[bar/external-top]
-monitor = DP-4
-monitor-exact = true
-overide-redirect = true
-
-enable-ipc = true
-
-bottom = false
-
-fixed-center = true
-
-width = 100%
-height = 23pt
-offset-x = 98%
-offset-y = 8pt
-
-border-size = 5pt
-border-color = ${colors.bg-3}
-
-line-size = 1pt
-
-padding-left = 0pt
-padding-right = 0pt
-
-module-margin-left = 0pt
-module-margin-right = 0pt
-
-background = ${colors.bg-3}
-foreground = ${colors.fg-3}
-
-font-0 = ShureTechMono Nerd Font:size=13;4
-font-1 = ShureTechMono Nerd Font:size=22;5
-font-2 = ShureTechMono Nerd Font:size=25;6
-font-3 = ShureTechMono Nerd Font:size=16;4
-
-scroll-up = i3.next
-scroll-down = i3.prev
-
-modules-left = left filesystem slash space slash cpu slash space slash memory slash xworkspaces-1 right
-modules-center = left spotify space previous playpause next right
-modules-right = left pulseaudio slash space slash network slash space slash time slash space slash date right
 
 wm-restock = i3
 
