--- a/.config/polybar/modules/misc.ini
+++ b/.config/polybar/modules/misc.ini
@@ -22,14 +22,14 @@ content-foreground = ${colors.bg-1}
 
 [module/left]
 type = custom/text
-content-background = ${colors.bg-3}
+content-background = #00000000
 content-foreground = ${colors.bg-1}
 content-font = 2
 content = %{T3}%{T-}
 
 [module/right]
 type = custom/text
-content-background = ${colors.bg-3}
+content-background = #00000000
 content-foreground = ${colors.bg-1}
 content-font = 2
 content = %{T3}%{T-}
