--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,9 @@
       recursive: true
 
 - link:
+    ~/wallpapers:
+      path: wallpapers
+
     ~/.gitconfig:
       path: .gitconfig
     ~/.bashrc:
