--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,33 +11,42 @@
       recursive: true
 
 - link:
-    ~\wallpapers:
-      path: wallpapers
-    ~\.gitconfig:
-      path: .gitconfig
-    ~\.bashrc:
-      path: .bashrc
+    ~/.dotfiles:
+      path: ..
+    ~/gitconfig:
+      path: dots/.gitconfig
+    ~/.bashrc:
+      path: dots/.bashrc
     ~/.bash_history:
-      path: .bash_history
+      path: dots/.bash_history
     ~/.zshrc:
-      path: .zshrc
+      path: dots/.zshrc
     ~/.zsh_profile:
-      path: .zsh_profile
+      path: dots/.zsh_profile
     ~/.ideavimrc:
-      path: .ideavimrc
+      path: dots/.ideavimrc
     ~/.config/tmux:
-      path: .config/tmux
+      path: dots/.config/tmux
     ~/.config/vim:
-      path: .config/vim
+      path: dots/.config/vim
     ~/.config/nvim:
-      path: .config/nvim
+      path: dots/.config/nvim
     ~/.config/lazygit:
-      path: .config/lazygit
+      path: dots/.config/lazygit
     ~/.local/bin/:
-      path: .local/bin/*
+      path: dots/.local/bin/*
       glob: true
     ~/.config/neofetch:
-      path: .config/neofetch
+      path: dots/.config/neofetch
+    ~/.config/kitty:
+      path: dots/.config/kitty
+    # macOS configs ----
+    ~/.config/yabai:
+      path: dots/.config/yabai
+    ~/.config/sketchybar:
+      path: dots/.config/sketchybar
+    ~/.config/skhd:
+      path: dots/.config/skhd
 
     # Linux configs ----
     ~/.Xmodmap:
