Configs for yabai, skhd, sketchybar, kitty

--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
 set-option -g default-terminal "screen-256color"
+set -ga terminal-overrides ',*:Ss=\E[5 %p1%d q:Se=\E[2 q'
 set -g mouse on
 
 unbind C-b
