--- a/dots/.config/kitty/kitty.conf
+++ b/dots/.config/kitty/kitty.conf
@@ -1,112 +1,76 @@
-# Shell
-shell /bin/zsh
+shell_integration no-cursor
+cursor_shape underline
+cursor_blink_rate 1.0
 
 # Fonts
-font_family			ShureTechMono Nerd Font
-bold_font			auto
-italic_font			auto
-bold_italic_font	auto
+font_family             JetBrainsMono Nerd Font Mono
+bold_font               JetBrainsMono Nerd Font Propo,JetBrainsMono NFP ExtraBold
+italic_font             JetBrainsMono Nerd Font Mono
+bold_italic_font        JetBrainsMono Nerd Font Propo,JetBrainsMono NFP ExtraBold
 
-font_size 12.0
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
-force_ltr no
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-font_features none
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
 
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
 
-# Cursors
-cursor #d4d7ff
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #A6E3A1
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #3C3E4F
+tab_bar_background      #11111B
 
-cursor_shape underline
-cursor_underline_thickness 1.5
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
 
-cursor_blink_interval .7
+# The 16 terminal colors
 
+# black
+color0 #45475A
+color8 #585B70
 
-# Scrollback
-scrollback_lines 2000
+# red
+color1 #F38BA8
+color9 #F38BA8
 
-scrollback_fill_enlarged_window no
+# green
+color2  #A6E3A1
+color10 #A6E3A1
 
-wheel_scroll_multiplier 8.0
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
 
-wheel_scroll_min_lines 1
+# blue
+color4  #89B4FA
+color12 #89B4FA
 
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
 
-# Performance tuning
-repaint_delay 20
+# cyan
+color6  #94E2D5
+color14 #94E2D5
 
-input delay 5
-
-sync_to_monitor yes
-
-
-# Terminal bell
-enable_audio_bell no
-
-
-# Tab Bar
-tab_bar_edge bottom
-
-tab_bar_margin_width 0.0
-tab_bar_margin_height 0.0 0.0
-
-tab_bar_style powerline
-
-tab_bar_align left
-
-tab_bar_min_tabs 2
-
-tab_switch_strategy previous
-
-tab_powerline_style round
-
-tab_title_max_length 0
-tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
-
-
-# Colorscheme
-foreground #d4d7ff
-background #12121f
-
-background_opacity 1.0
-
-background_tint 1.0
-
-dim_opacity 0.75
-
-selection_foreground #12121f
-selection_background #d4d7ff
-
-# Black
-color0	#12121f
-color8	#29293f
-
-# Red
-color1	#d95177
-color9	#d54c73
-
-# Green
-color2	#7bdba6
-color10	#78dca7
-
-# Yellow
-color3	#fcf4a2
-color11 #fcf295
-
-# Blue
-color4	#759eea
-color12	#6d98e8
-
-# Purple
-color5	#908cdb
-color13	#837dd7
-
-# Cyan
-color6	#6be5e3
-color14	#65dedc
-
-# White
-color7	#d4d7ff
-color15	#f4f7ff
-
+# white
+color7  #BAC2DE
+color15 #A6ADC8
