--- a/dots/.config/lazygit/state.yml
+++ b/dots/.config/lazygit/state.yml
@@ -1,7 +1,6 @@
 lastupdatecheck: 0
 recentrepos:
-- /home/flynn/repos/neuroexplore
-- /home/flynn/repos/.dotfiles
+- /Users/flynnoconnell/repos/.dotfiles
 startuppopupversion: 5
 customcommandshistory: []
-hidecommandlog: false
+hidecommandlog: true
