--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,9 @@ wallpapers/
 fonts/
 # Don't want packer plugins to be included
 **/pack/**/start/*
-
+**/node_modules/
+**/nvim/log
+**/nvim/*.log
+**/nvim/state/**
+**/nvim/telescope_history
+**/nvim/rplugin.vim
