--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
-set-option -g default-terminal "screen-256color"
-set -ga terminal-overrides ',*:Ss=\E[5 %p1%d q:Se=\E[2 q'
+set -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
 unbind C-b
@@ -7,6 +7,10 @@ set -g prefix C-Space
 bind C-Space send-prefix
 unbind x
 bind x kill-pane
+
+# Better status line colors
+set -g status-bg black
+set -g status-fg white
 
 # Vim style pane selection
 bind h select-pane -L
@@ -26,14 +30,17 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-set -g @catppuccin_flavour 'mocha'
+# Plugins ----------------------------
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/nvim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-set -g @plugin 'catppuccin/tmux'
+# set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @catppuccin_flavour 'mocha'
+
 set -g @catppuccin_window_tabs_enabled on
 set -g @catppuccin_powerline_icons_theme_enabled on
 set -g @catppuccin_l_left_separator ""
@@ -56,3 +63,7 @@ bind -n C-Left resize-pane -L 2
 bind -n C-Down resize-pane -D 2
 bind -n C-Up resize-pane -U 2
 bind -n C-Right resize-pane -R 2
+
+# Install plugin manager and plugins
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
