vim, rc, lazygit

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -59,7 +59,7 @@ shadow-exclude = [
 
 # Crop shadow of a window fully on a particular monitor to that monitor. This is
 # currently implemented using the X RandR extension.
-# crop-shadow-to-monitor = false
+crop-shadow-to-monitor = false
 
 
 #################################
@@ -129,8 +129,10 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = ["100:class_g = 'firefox'",
-    "95:class_g = 'jetbrains-pycharm'"]
+opacity-rule = ["95:class_g = 'firefox'",
+    "95:class_g = 'jetbrains-pycharm'",
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    ]
 # opacity-rule = ["90:class_g = 'jetbrains-pycharm'"]
 
 
