--- a/.ideavimrc
+++ b/.ideavimrc
@@ -28,7 +28,7 @@ set ideastatusicon=gray
 
 """ Mappings --------------------------------
 map <leader>z <Action>(ToggleDistractionFreeMode)
-nnoremap <leader>pv :NERDTreeToggle<CR>
+nnoremap \ :NERDTree<CR>
 
 map <leader>J <Action>(MoveLineDown)
 map <leader>K <Action>(MoveLineUp)
@@ -44,7 +44,9 @@ map <C-u> <C-u>zz
 map n nzzzv
 map N Nzzzv
 
-map <C-f> <Action>(Find)
+" method down/up"
+nnoremap [[ :action MethodUp<CR>
+nnoremap ]] :action MethodDown<CR>
 
 " -- tabs
 map <C-1> 1gt
@@ -56,7 +58,6 @@ map <C-n> <Action>(NextTab)
 map <C-p> <Action>(PreviousTab)
 map <leader>q <Action>(CloseContent)
 
-map <C-j> <Action>(EditorEnter)
 map gh <Action>(ShowErrorDescription)
 map gi <Action>(GotoImplementation)
 map gd <Action>(GotoDeclaration)
@@ -66,7 +67,6 @@ map <leader>ev :e ~/.ideavimrc<CR>
 
 " rename "
 map gr <Action>(RenameElement)
-map <leader>h <Action>(QuickJavaDoc)
 
 map <leader>p ["_dP]
 map <leader>y ["+y]
@@ -75,21 +75,30 @@ map <leader>Y ["+Y]
 map <leader>d ["_d]
 imap kj <Esc>
 
+""" Window / Split Management ---------------
 noremap <C-L> <C-W><C-L>
 noremap <C-H> <C-W><C-H>
-
 map <leader>\ <Action>(SplitVertically)
 map <leader>- <Action>(SplitHorizontally)
 
-" open terminal"
-map <leader>c :action DebugConsole<CR>
+nnoremap <leader>wp :action JumpToLastWindow<CR>
+nnoremap <leader>wn :action JumpToNextWindow<CR>
+nnoremap <leader>h :waction HideAllWindows<CR>
 
-" Original mappings from provided example
+"dock pinned"
+map <leader>wd <Action>(DockPinned)
+map <leader>wf <Action>(Float)
+map <leader>ww <Action>(Window)
+
+"Dock Pinned: <C-d>
+"Float: <C-f>
+"Window: <C-w>
+
+""" Run/Debug --------------------------------
 map ,r <Action>(Run)
-map ,d <Action>(Debug)
 map ,R <Action>(Rerun)
 
-map <leader>e <Action>(ExecuteInPyConsoleAction)
+map ,d <Action>(Debug)
 map ,c <Action>(Stop)
 map ,b <Action>(ToggleLineBreakpoint)
 map ,n <Action>(MuteBreakpoints)
@@ -102,4 +111,3 @@ map ,u <Action>(RunToCursor)
 map ,p <Action>(Resume)
 
 map <S-Space> <Action>(GotoNextError)
-map <leader>o <Action>(FileStructurePopup)
