--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -41,7 +41,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+f exec firefox
+bindsym $mod+Shift+f exec firefox-developer-edition
 bindsym $mod+Shift+p exec postman
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+Shift+d exec "rofi -modi run -show run"
@@ -57,7 +57,6 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
-bindsym $mod+a focus parent
 bindsym $mod+r mode "resize"
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -123,7 +122,7 @@ for_window [class="^.*"] client.focused
 workspace "1" output DP-2
 workspace "2" output DP-2
 workspace "3" output DP-2
-workspace "4" output DP-2
+workspace "4" output DP-0
 workspace "5" output DP-0
 workspace "6" output DP-0
 
@@ -176,3 +175,4 @@ client.placeholder      #12121F #12121F #D4D7FF #12121F   #222236
 client.background       #12121F
 
 exec_always nitrogen --restore
+
