--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -106,17 +106,8 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-workspace "1" output --primary DP-2
-workspace "2" output --primary DP-2
-workspace "3" output --primary DP-2
-workspace "4" output DP-0
-workspace "5" output DP-0
-workspace "6" output DP-0
-workspace "7" output DP-0
-
 for_window [class="^.*"] border pixel 1
 for_window [class="^.*"] client.focused
-
 
 # Start applications on specific workspaces --------------------
 workspace "1" output DP-2
@@ -124,7 +115,10 @@ workspace "2" output DP-2
 workspace "3" output DP-2
 workspace "4" output DP-0
 workspace "5" output DP-0
-workspace "6" output DP-0
+workspace "6" output DP-2
+workspace "7" output DP-2
+workspace "8" output DP-2
+workspace "9" output DP-2
 
 # App to workspace assignments
 assign [class="^firefox$"] $ws1
@@ -136,12 +130,14 @@ for_window [class="kitty"] move to workspace $ws2
 assign [class="^jetbrains-pycharm$"] $ws3
 for_window [class="jetbrains-pycharm"] move to workspace $ws3
 
-assign [class="^discord$"] $ws5
-for_window [class="discord"] move to workspace $ws5
+assign [class="^discord$"] $ws4
+for_window [class="discord"] move to workspace $ws4
 
-assign [class="^spotify$"] $ws5
-for_window [class="spotify"] move to workspace $ws5
+assign [class="^spotify$"] $ws4
+for_window [class="spotify"] move to workspace $ws4
 
+assign [class="^zoom$"] $ws7
+for_window [class="discord"] move to workspace $ws7
 
 exec_always --no-startup-id "setxkbmap -option ctrl:nocaps"
 exec_always --no-startup-id "xsettingsd"
