--- a/dots/.config/kitty/kitty.conf
+++ b/dots/.config/kitty/kitty.conf
@@ -2,6 +2,16 @@ shell_integration no-cursor
 cursor_shape underline
 cursor_blink_rate 1.0
 
+map ctrl+1 send_text application \x14\x31
+map ctrl+2 send_text application \x14\x32
+map ctrl+3 send_text application \x14\x33
+map ctrl+4 send_text application \x14\x34
+map ctrl+5 send_text application \x14\x35
+map ctrl+6 send_text application \x14\x36
+map ctrl+7 send_text application \x14\x37
+map ctrl+8 send_text application \x14\x38
+map ctrl+9 send_text application \x14\x39
+
 # Fonts
 font_family             JetBrainsMono Nerd Font Mono
 bold_font               JetBrainsMono Nerd Font Propo,JetBrainsMono NFP ExtraBold
