--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -117,7 +117,7 @@ inactive-dim = 0.0;
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'zoom'"];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 0.0;
@@ -129,9 +129,11 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = ["95:class_g = 'firefox'",
+opacity-rule = [
+    "95:class_g = 'firefox'",
     "95:class_g = 'jetbrains-pycharm'",
-    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
+    "100:class_g = 'zoom'",
     ]
 # opacity-rule = ["90:class_g = 'jetbrains-pycharm'"]
 
