--- a/dots/.config/i3/config
+++ b/dots/.config/i3/config
@@ -17,7 +17,6 @@ exec_always --no-startup-id xrandr --output DP-2 --primary --rate 143.91 --mode 
 exec_always --no-startup-id picom --config /home/$USER/.config/picom/picom.conf
 exec_always --no-startup-id /home/$USER/.config/polybar/scripts/polybarstart.sh
 exec --no-startup-id xrdb -merge ~/.Xresources
-exec --no-startup-id /home/$USER/.local/bin/set-wallpaper
 exec --no-startup-id nm-applet
 exec_always --no-startup-id blueman-applet
 
@@ -42,17 +41,15 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 bindsym $mod+Shift+f exec firefox-developer-edition
-bindsym $mod+Shift+p exec postman
 bindsym $mod+Shift+space floating toggle
-bindsym $mod+Shift+d exec "rofi -modi run -show run"
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+q kill
 
+bindsym $mod+space exec "rofi -modi drun -show drun"
 bindsym $mod+Return exec --no-startup-id kitty @ new-window || kitty
 bindsym $mod+bar split v
 bindsym $mod+minus split h
-bindsym $mod+d exec "rofi -modi drun -show drun"
 bindsym $mod+f fullscreen toggle
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
@@ -64,7 +61,6 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 bindsym $mod+m move workspace to output right
 bindsym $mod+n move workspace to output left
-bindsym $mod+space focus mode_toggle
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
