--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -43,8 +43,7 @@ shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@:c"
+  "class_g = 'Cairo-clock'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -133,8 +132,8 @@ opacity-rule = [
     "95:class_g = 'firefox'",
     "95:class_g = 'jetbrains-pycharm'",
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
-    "100:class_g = 'zoom'",
-    ]
+    "100:class_g = 'zoom'"
+];
 # opacity-rule = ["90:class_g = 'jetbrains-pycharm'"]
 
 
