prevent transparency on stacked layout

--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -148,8 +148,9 @@ corner-radius = 8
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
+    "window_type = 'dock'",
+    "window_type = 'desktop'",
+    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
 
