remove broken state check

--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -128,14 +128,13 @@ focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'zoom'"];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
+
 opacity-rule = [
     "95:class_g = 'firefox'",
     "95:class_g = 'jetbrains-pycharm'",
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "100:class_g = 'zoom'"
 ];
-# opacity-rule = ["90:class_g = 'jetbrains-pycharm'"]
-
 
 #################################
 #           Corners             #
@@ -149,8 +148,7 @@ corner-radius = 8
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
     "window_type = 'dock'",
-    "window_type = 'desktop'",
-    "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+    "window_type = 'desktop'"
 ];
 
 
