--- a/dots/.config/picom/picom.conf
+++ b/dots/.config/picom/picom.conf
@@ -40,10 +40,11 @@ shadow-color = "#000000"
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'"
+    "name = 'Notification'",
+    "name = 'cpt_frame_xcb_window'",
+    "class_g = 'Conky'",
+    "class_g ?= 'Notify-osd'",
+    "class_g = 'Cairo-clock'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -130,8 +131,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'", "class_g = 'zoom'"];
 #
 
 opacity-rule = [
-    "95:class_g = 'firefox'",
-    "95:class_g = 'jetbrains-pycharm'",
+    "100:class_g = 'firefox'",
+    "100:class_g = 'jetbrains-pycharm'",
     "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'",
     "100:class_g = 'zoom'"
 ];
